--- a/app/src/main/res/layout/activity_picture_selector.xml
+++ b/app/src/main/res/layout/activity_picture_selector.xml
@@ -11,7 +11,7 @@
         android:padding="0dp"
         android:layout_alignParentTop="true"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="50dp"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
@@ -77,6 +77,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </FrameLayout>
-
-
+    <LinearLayout
+        android:layout_alignParentBottom="true"
+        android:background="#C0424242"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="40dp">
+        <Button
+            android:id="@+id/select_folder_name"
+            android:textColor="#FFFFFF"
+            android:text="@string/app_name"
+            android:background="#00000000"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
+        <ImageView
+            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="2dp"
+            android:src="@drawable/more"
+            android:layout_gravity="center_vertical"
+            android:layout_width="12dp"
+            android:layout_height="12dp" />
+    </LinearLayout>
 </RelativeLayout>
