--- a/app/src/main/res/layout/activity_show_picture.xml
+++ b/app/src/main/res/layout/activity_show_picture.xml
@@ -32,7 +32,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.1">
                 <ImageButton
-                    android:id="@+id/back_up"
+                    android:id="@+id/back_to_activity"
                     android:src="@drawable/back2"
                     android:background="@drawable/button_back"
                     android:scaleType="centerInside"
@@ -52,13 +52,12 @@
                 android:id="@+id/pic_num"
                 android:textSize="24sp"
                 android:textColor="#FFFFFF"
-                android:text="@string/title_name"
                 android:layout_width="0dp"
                 android:layout_weight="0.7"
                 android:gravity="center_horizontal|center_vertical"
                 android:layout_height="match_parent" />
             <Button
-                android:id="@+id/pic_send"
+                android:id="@+id/pic_send_ok"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:padding="2dp"
                 android:background="@drawable/send_shape"
@@ -71,31 +70,10 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
-    <FrameLayout
-        android:id="@+id/pic_frag"
+    <ImageView
+        android:id="@+id/picture"
+        android:scaleType="fitCenter"
         android:layout_below="@id/pic_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </FrameLayout>
-    <LinearLayout
-        android:layout_alignParentBottom="true"
-        android:background="#C0424242"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="40dp">
-        <Button
-            android:id="@+id/select_folder_name"
-            android:textColor="#FFFFFF"
-            android:text="@string/all_items"
-            android:background="#00000000"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:layout_marginBottom="0dp"
-            android:layout_marginLeft="2dp"
-            android:src="@drawable/more"
-            android:layout_gravity="center_vertical"
-            android:layout_width="12dp"
-            android:layout_height="12dp" />
-    </LinearLayout>
+        android:layout_height="match_parent" />
 </RelativeLayout>
